#available tests

add_subdirectory(tooltestsuites)

add_subdirectory(actor-id)
add_subdirectory(behavior)
add_subdirectory(intrusive_ptr)
add_subdirectory(life-cycle)
add_subdirectory(memory_resource)
add_subdirectory(message)
add_subdirectory(message-id)
add_subdirectory(metaprogramming)
add_subdirectory(non_copy_obj)
add_subdirectory(polymorphic_allocator)
add_subdirectory(queue)
add_subdirectory(spawn)
add_subdirectory(rtt)
add_subdirectory(timer)
